Sun Nov  1 09:12:10 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_yylex): ':' separated by a comment and a newline
	  is not valid as symbol.

Sat Oct 31 20:15:48 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* test/openssl/test_pair.rb: skipped tests if openssl doesn't support
	  ECDH cipher.

Sat Oct 31 14:58:10 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* man/ruby.1 (SYNOPSIS): remove extraneous space for -F option as
	  it does not allow spaces before its argument.
	  [ruby-core:71283] [Bug #11641]

Sat Oct 31 14:58:01 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* man/ruby.1 (SYNOPSIS): remove extraneous space for -F option as
	  it does not allow spaces before its argument.
	  [ruby-core:71283] [Bug #11641]

Sat Oct 31 10:22:49 2015  yui-knk  <spiketeika@gmail.com>

	* eval_error.c (undef_mesg_for): fix typo.  Before this commit
	  `ArgumentError: malformed format string - %$` was raised when
	  `NameError#message` is called.  [ruby-core:71282] [Bug #11640]
	  [Fix GH-1077]

Fri Oct 30 21:12:45 2015  Kazuki Tsujimoto  <kazuki@callcc.net>

	* gems/bundled_gems: update to power_assert 0.2.5.

Fri Oct 30 19:29:52 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c (newobj_slowpath): do not need to use flags hack (commit miss).

Fri Oct 30 19:08:48 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c (heap_get_freeobj_from_next_freepage): not so UNLIKELY.

Fri Oct 30 18:09:51 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c (newobj_slowpath): reduce 1 parameter to use only registers
	  for performance.

	  On my laptop, 'N.times{x = []}' (where N = 29_000_000) is
	  1.86 sec -> 1.74 sec.

Fri Oct 30 12:53:21 2015  yui-knk  <spiketeika@gmail.com>

	* test/ruby/test_call.rb: added test for safe navigation operator.
	  [fix GH-1066]

Fri Oct 30 12:47:34 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ChangeLog: fix wrong commit name.

Fri Oct 30 12:36:16 2015  yui-knk  <spiketeika@gmail.com>

	* vm_method.c: added documentation of protected/private methods.